# yaoyi-xungu

./: app.py  pyproject.toml  requirements.txt  test_xungu_model.py  修复报告.md  本地部署指南.md  运行指南.md
assets/: yaoyi_corpus.json
config/: agent_llm_config.json  agent_llm_config.json.bak
src/agents/: agent.py.bak
src/tools/: yaoyi_xungu_tool.py  yaoyi_xungu_tool.py.bak
软著申请材料/: 用户手册.md  软件说明书.md
