[project]
name = "vibe-coding"
version = "0.1.0"
description = "Coze Vibe Coding project"
requires-python = ">=3.12"
dependencies = [
    # === 核心依赖 ===
    "langchain==1.0.3",
    "langchain-openai==1.0.1",
    "langgraph==1.0.2",
    "langgraph-checkpoint==3.0.0",
    "langgraph-prebuilt==1.0.2",
    "langgraph-sdk==0.2.9",
    "langsmith==0.4.39",
    
    # === Web 框架 ===
    "fastapi>=0.121,<1",
    "uvicorn>=0.38,<1",
    "streamlit>=1.55.0",
    
    # === 数据处理 ===
    "pandas>=2.2,<3",
    "openpyxl>=3.1,<4",
    
    # === 数据库 ===
    "SQLAlchemy>=2.0,<3",
    "psycopg2-binary>=2.9,<3",
    "langgraph-checkpoint-postgres>=3.0,<4",
    "psycopg[binary]>=3.3,<4",
    "psycopg-pool>=3.3,<4",
    
    # === 工具库 ===
    "pydantic>=2.12,<3",
    "Jinja2>=3.1,<4",
    "alembic>=1.16,<2",
    "python-dotenv>=1.2,<2",
    "boto3>=1.40,<2",
    "chardet>=5.2,<6",
    "rich>=14,<15",
    
    # === Coze SDK ===
    "coze-coding-utils>=0.2.6,<1",
    "coze-workload-identity>=0.1.4,<1",
    "cozeloop>=0.1.25,<1",
    "coze-coding-dev-sdk>0.5.0,<1",
    
    # === 已移除的包（编译问题，不需要）===
    # opencv-python: 图片处理，瑶医训诂不需要
    # Pillow: 图片处理，瑶医训诂不需要
    # pypdf: PDF 处理，瑶医训诂不需要
    # docx2python: Word 处理，瑶医训诂不需要
    # python-pptx: PPT 处理，瑶医训诂不需要
]

[tool.uv]
# 使用阿里云镜像作为默认源，替代 pypi.org
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true